// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`getPokemonNames shall return all pokemon by default 1`] = `
[
  "BUTTERFREE",
  "RATICATE",
  "ARBOK",
  "PIKACHU_HALLOWEEN",
  "RAICHU",
  "CLEFABLE",
  "NINETALES",
  "NINETALES_ALOLAN",
  "PRIMEAPE",
  "DODRIO",
  "ONIX",
  "MAROWAK",
  "MEGANIUM",
  "TYPHLOSION",
  "FERALIGATR",
  "STEELIX",
  "HOUNDOOM",
  "VIGOROTH",
  "SLAKING",
  "ALTARIA",
  "BANETTE",
  "WALREIN",
  "WEAVILE",
  "CATERPIE",
  "METAPOD",
  "RATTATA",
  "EKANS",
  "PIKACHU",
  "CLEFAIRY",
  "VULPIX",
  "VULPIX_ALOLAN",
  "MANKEY",
  "DODUO",
  "CUBONE",
  "EEVEE_CHRISTMAS",
  "CHIKORITA",
  "BAYLEEF",
  "CYNDAQUIL",
  "QUILAVA",
  "TOTODILE",
  "CROCONAW",
  "PICHU",
  "CLEFFA",
  "SNEASEL",
  "HOUNDOUR",
  "SLAKOTH",
  "SWABLU",
  "SHUPPET",
  "SPHEAL",
  "SEALEO",
  "VENUSAUR",
  "CHARIZARD",
  "BLASTOISE",
  "DUGTRIO",
  "VICTREEBEL",
  "GOLEM",
  "GENGAR",
  "KANGASKHAN",
  "MR_MIME",
  "PINSIR",
  "DITTO",
  "DRAGONITE",
  "QUAGSIRE",
  "DELIBIRD",
  "PUPITAR",
  "TYRANITAR",
  "AGGRON",
  "ABSOL",
  "LUXRAY",
  "TOXICROAK",
  "ABOMASNOW",
  "VIKAVOLT",
  "BEWEAR",
  "COMFEY",
  "CRAMORANT",
  "FLORAGATO",
  "MEOWSCARADA",
  "CROCALOR",
  "SKELEDIRGE",
  "QUAXWELL",
  "QUAQUAVAL",
  "BULBASAUR",
  "IVYSAUR",
  "CHARMANDER",
  "CHARMELEON",
  "SQUIRTLE",
  "WARTORTLE",
  "DIGLETT",
  "BELLSPROUT",
  "WEEPINBELL",
  "GEODUDE",
  "GRAVELER",
  "GASTLY",
  "HAUNTER",
  "DRATINI",
  "DRAGONAIR",
  "WOOPER",
  "LARVITAR",
  "ARON",
  "LAIRON",
  "SHINX",
  "LUXIO",
  "MIME_JR",
  "CROAGUNK",
  "SNOVER",
  "GRUBBIN",
  "CHARJABUG",
  "STUFFUL",
  "SPRIGATITO",
  "FUECOCO",
  "QUAXLY",
  "WIGGLYTUFF",
  "PERSIAN",
  "GOLDUCK",
  "ARCANINE",
  "SLOWBRO",
  "VAPOREON",
  "JOLTEON",
  "FLAREON",
  "AMPHAROS",
  "SUDOWOODO",
  "ESPEON",
  "UMBREON",
  "SLOWKING",
  "WOBBUFFET",
  "HERACROSS",
  "RAIKOU",
  "ENTEI",
  "SUICUNE",
  "GARDEVOIR",
  "SABLEYE",
  "SWALOT",
  "DRIFBLIM",
  "LUCARIO",
  "MAGNEZONE",
  "TOGEKISS",
  "LEAFEON",
  "GLACEON",
  "GALLADE",
  "SYLVEON",
  "DEDENNE",
  "MIMIKYU",
  "PAWMOT",
  "PIKACHU_CHRISTMAS",
  "JIGGLYPUFF",
  "MEOWTH",
  "PSYDUCK",
  "GROWLITHE",
  "SLOWPOKE",
  "MAGNEMITE",
  "MAGNETON",
  "EEVEE",
  "IGGLYBUFF",
  "TOGEPI",
  "TOGETIC",
  "MAREEP",
  "FLAAFFY",
  "RALTS",
  "KIRLIA",
  "GULPIN",
  "WYNAUT",
  "BONSLY",
  "DRIFLOON",
  "RIOLU",
  "PAWMI",
  "PAWMO",
]
`;

exports[`getPokemonNames shall return all cyan pokemon 1`] = `
[
  "CLEFABLE",
  "DODRIO",
  "FERALIGATR",
  "CLEFAIRY",
  "DODUO",
  "TOTODILE",
  "CROCONAW",
  "CLEFFA",
  "SWABLU",
  "BLASTOISE",
  "QUAGSIRE",
  "DELIBIRD",
  "COMFEY",
  "CRAMORANT",
  "QUAXWELL",
  "SQUIRTLE",
  "WARTORTLE",
  "WOOPER",
  "QUAXLY",
  "WIGGLYTUFF",
  "GOLDUCK",
  "SLOWBRO",
  "VAPOREON",
  "SLOWKING",
  "SUICUNE",
  "TOGEKISS",
  "SYLVEON",
  "JIGGLYPUFF",
  "PSYDUCK",
  "SLOWPOKE",
  "IGGLYBUFF",
  "TOGEPI",
  "TOGETIC",
]
`;

exports[`getPokemonNames shall return all taupe pokemon 1`] = `
[
  "NINETALES",
  "ONIX",
  "MAROWAK",
  "TYPHLOSION",
  "VULPIX",
  "CUBONE",
  "CYNDAQUIL",
  "QUILAVA",
  "CHARIZARD",
  "DUGTRIO",
  "GOLEM",
  "PUPITAR",
  "CROCALOR",
  "CHARMANDER",
  "CHARMELEON",
  "DIGLETT",
  "GEODUDE",
  "GRAVELER",
  "LARVITAR",
  "FUECOCO",
  "ARCANINE",
  "FLAREON",
  "SUDOWOODO",
  "ENTEI",
  "GROWLITHE",
  "BONSLY",
]
`;

exports[`getPokemonNames shall return all snowdrop pokemon 1`] = `
[
  "RATICATE",
  "NINETALES_ALOLAN",
  "HOUNDOOM",
  "VIGOROTH",
  "SLAKING",
  "WALREIN",
  "WEAVILE",
  "RATTATA",
  "VULPIX_ALOLAN",
  "EEVEE_CHRISTMAS",
  "SNEASEL",
  "HOUNDOUR",
  "SLAKOTH",
  "SPHEAL",
  "SEALEO",
  "KANGASKHAN",
  "DITTO",
  "TYRANITAR",
  "ABSOL",
  "ABOMASNOW",
  "MEOWSCARADA",
  "SNOVER",
  "PERSIAN",
  "UMBREON",
  "SABLEYE",
  "GLACEON",
  "MEOWTH",
  "EEVEE",
]
`;

exports[`getPokemonNames shall return all lapis pokemon 1`] = `
[
  "PRIMEAPE",
  "MEGANIUM",
  "MANKEY",
  "CHIKORITA",
  "BAYLEEF",
  "VENUSAUR",
  "VICTREEBEL",
  "MR_MIME",
  "BEWEAR",
  "FLORAGATO",
  "QUAQUAVAL",
  "BULBASAUR",
  "IVYSAUR",
  "BELLSPROUT",
  "WEEPINBELL",
  "MIME_JR",
  "STUFFUL",
  "SPRIGATITO",
  "ESPEON",
  "WOBBUFFET",
  "GARDEVOIR",
  "LUCARIO",
  "LEAFEON",
  "GALLADE",
  "RALTS",
  "KIRLIA",
  "WYNAUT",
  "RIOLU",
]
`;

exports[`getPokemonNames shall return all power plant pokemon 1`] = `
[
  "PIKACHU_HALLOWEEN",
  "RAICHU",
  "STEELIX",
  "BANETTE",
  "PIKACHU",
  "PICHU",
  "SHUPPET",
  "GENGAR",
  "AGGRON",
  "LUXRAY",
  "SKELEDIRGE",
  "GASTLY",
  "HAUNTER",
  "ARON",
  "LAIRON",
  "SHINX",
  "LUXIO",
  "JOLTEON",
  "AMPHAROS",
  "RAIKOU",
  "DRIFBLIM",
  "MAGNEZONE",
  "DEDENNE",
  "MIMIKYU",
  "PAWMOT",
  "PIKACHU_CHRISTMAS",
  "MAGNEMITE",
  "MAGNETON",
  "MAREEP",
  "FLAAFFY",
  "DRIFLOON",
  "PAWMI",
  "PAWMO",
]
`;

exports[`getPokemonNames shall return all pokemon for multiple islands 1`] = `
[
  "RATICATE",
  "PIKACHU_HALLOWEEN",
  "RAICHU",
  "CLEFABLE",
  "NINETALES",
  "NINETALES_ALOLAN",
  "PRIMEAPE",
  "DODRIO",
  "ONIX",
  "MAROWAK",
  "MEGANIUM",
  "TYPHLOSION",
  "FERALIGATR",
  "STEELIX",
  "HOUNDOOM",
  "VIGOROTH",
  "SLAKING",
  "BANETTE",
  "WALREIN",
  "WEAVILE",
  "RATTATA",
  "PIKACHU",
  "CLEFAIRY",
  "VULPIX",
  "VULPIX_ALOLAN",
  "MANKEY",
  "DODUO",
  "CUBONE",
  "EEVEE_CHRISTMAS",
  "CHIKORITA",
  "BAYLEEF",
  "CYNDAQUIL",
  "QUILAVA",
  "TOTODILE",
  "CROCONAW",
  "PICHU",
  "CLEFFA",
  "SNEASEL",
  "HOUNDOUR",
  "SLAKOTH",
  "SWABLU",
  "SHUPPET",
  "SPHEAL",
  "SEALEO",
  "VENUSAUR",
  "CHARIZARD",
  "BLASTOISE",
  "DUGTRIO",
  "VICTREEBEL",
  "GOLEM",
  "GENGAR",
  "KANGASKHAN",
  "MR_MIME",
  "DITTO",
  "QUAGSIRE",
  "DELIBIRD",
  "PUPITAR",
  "TYRANITAR",
  "AGGRON",
  "ABSOL",
  "LUXRAY",
  "ABOMASNOW",
  "BEWEAR",
  "COMFEY",
  "CRAMORANT",
  "FLORAGATO",
  "MEOWSCARADA",
  "CROCALOR",
  "SKELEDIRGE",
  "QUAXWELL",
  "QUAQUAVAL",
  "BULBASAUR",
  "IVYSAUR",
  "CHARMANDER",
  "CHARMELEON",
  "SQUIRTLE",
  "WARTORTLE",
  "DIGLETT",
  "BELLSPROUT",
  "WEEPINBELL",
  "GEODUDE",
  "GRAVELER",
  "GASTLY",
  "HAUNTER",
  "WOOPER",
  "LARVITAR",
  "ARON",
  "LAIRON",
  "SHINX",
  "LUXIO",
  "MIME_JR",
  "SNOVER",
  "STUFFUL",
  "SPRIGATITO",
  "FUECOCO",
  "QUAXLY",
  "WIGGLYTUFF",
  "PERSIAN",
  "GOLDUCK",
  "ARCANINE",
  "SLOWBRO",
  "VAPOREON",
  "JOLTEON",
  "FLAREON",
  "AMPHAROS",
  "SUDOWOODO",
  "ESPEON",
  "UMBREON",
  "SLOWKING",
  "WOBBUFFET",
  "RAIKOU",
  "ENTEI",
  "SUICUNE",
  "GARDEVOIR",
  "SABLEYE",
  "DRIFBLIM",
  "LUCARIO",
  "MAGNEZONE",
  "TOGEKISS",
  "LEAFEON",
  "GLACEON",
  "GALLADE",
  "SYLVEON",
  "DEDENNE",
  "MIMIKYU",
  "PAWMOT",
  "PIKACHU_CHRISTMAS",
  "JIGGLYPUFF",
  "MEOWTH",
  "PSYDUCK",
  "GROWLITHE",
  "SLOWPOKE",
  "MAGNEMITE",
  "MAGNETON",
  "EEVEE",
  "IGGLYBUFF",
  "TOGEPI",
  "TOGETIC",
  "MAREEP",
  "FLAAFFY",
  "RALTS",
  "KIRLIA",
  "WYNAUT",
  "BONSLY",
  "DRIFLOON",
  "RIOLU",
  "PAWMI",
  "PAWMO",
]
`;
